--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 name: ldap_auth
 
 services:
@@ -11,6 +10,7 @@ services:
       python manage.py makemigrations &&
       python manage.py migrate &&
       python manage.py load_all_fixtures &&
+      python -m celery -A backend purge -f &&
       celery -A backend beat --loglevel=INFO &
       celery -A backend worker --loglevel=INFO --concurrency=1 --pool=solo -n workerLDAP &
       python manage.py runserver 0.0.0.0:8000"
